# weather-baml-o4mini-fix

./: .env.example  .gitignore  BUILD_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.context-foundry/: architecture.md  build-tasks.json  current-phase.json  scout-report.md  scout_report.json  session-summary.json
baml_src/: clients.baml  functions.baml  types.baml
src/: config.py  main.py
src/api/: routes.py
src/models/: api_models.py
src/services/: baml_service.py  cache_service.py  weather_api.py
tests/: conftest.py
tests/baml/: test_functions.baml
tests/integration/: test_pipeline.py
tests/unit/: test_baml_service.py  test_cache.py  test_weather_api.py
